--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,28 @@
 <!Doctype html>
 
 <html xmlns:th="http://thymeleaf.org">
-<head>
-    <title>Spring MVC Technical Blog Application</title>
-</head>
-<body>
-<h1>All Technical Posts</h1>
-<main id="posts">
-    <post th:each="p : ${posts}">
-        <h2 th:text="${p.title}"></h2>
-        <i>Posted On: </i> <span th:text="${p.date}"></span>
-        <div>
+    <head>
+        <title>Spring MVC Technical Blog Application</title>
+    </head>
+
+    <!--this head is added as part of layout.html file -->
+    <head th:replace="layout :: site-head">
+        <title>Login Page</title>
+    </head>
+
+<!--header,concept of thymeleaf, added for new webpage which is a new html page itself -->
+  <header th:replace="layout :: logged-out"></header>
+
+  <body>
+    <h1>All Technical Posts</h1>
+    <main id="posts">
+       <post th:each="p : ${posts}">
+         <h2 th:text="${p.title}"></h2>
+           <i>Posted On: </i> <span th:text="${p.date}"></span>
+          <div>
             <p th:text="${p.body}"></p>
-        </div>
-    </post>
-</main>
-</body>
+          </div>
+       </post>
+   </main>
+  </body>
 </html>
