Blog finally created without Database

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,22 +4,27 @@
      <head th:fragment="site-head"></head>
 
      <body>
-         <header th:fragment="logged-out" th:remove="tag">
-               <header>
-                  <a href="users/login.html" th:href="@{users/login}">Login</a>
-                  <a href="users/registration.html" th:href="@{users/registration}">Registration</a>
-               </header>
-         </header>
+     <header th:fragment="logged-out" th:remove="tag">
+         <header>
+             <a href="users/login.html" th:href="@{/users/login}">Login</a>
+             <a href="users/registration.html" th:href="@{/users/registration}">Registration</a>
 
-         <!--defined the "logged in fragment of posts.html file" here-->
-         <header th:fragment="logged-in" th:remove="tag">
-             <header>
-                 <!-- <form method="post"> same as below line, changed just with
-                 a little addition of th:action="@{users/logout} to implement logout button -->
-                 <form method="post" th:action="@{users/logout}">
-                     <input type="submit" value="Logout"/>
-                 </form>
-             </header>
+         </header>
+     </header>
+
+     <!--defined the "logged in fragment of posts.html file" here-->
+     <header th:fragment="logged-in" th:remove="tag">
+         <header>
+             <!--To display the 'Create post' button, add the following instruction
+             to the logged in fragment in the layout.html file: -->
+             <a href="posts/create.html" th:href="@{posts/newPost}">Create post</a>
+             <!-- <form method="post"> same as below line, changed just with
+             a little addition of th:action="@{users/logout} to implement logout button -->
+             <form method="post" th:action="@{/users/logout}">
+                 <input type="submit" value="Logout"/>
+             </form>
+         </header>
+     </header>
      </body>
 
 </html>
